--- a/resources/config.properties
+++ b/resources/config.properties
@@ -1,5 +1,9 @@
-metadata.broker.list=localhost:9092
-etl.schema.registry.url=http://localhost:2876/schema-repo
+#metadata.broker.list=localhost:9092
+#etl.schema.registry.url=http://localhost:2876/schema-repo
+
+metadata.broker.list=hadoop-manager:9092
+etl.schema.registry.url=http://hadoop-manager:2876/schema-repo
+
 
 avro.schema.file=resources/testSchema1.avsc
 kafka.topic=test
